--- a/package.json
+++ b/package.json
@@ -4,17 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/main.js"
+    "start": "npm run build && node build/app.js",
+    "build": "rimraf ./build && npx tsc",
+    "build::webpack": "npx webpack --mode production",
+    "start::webpack": "npx webpack --mode development"
   },
   "type": "commonjs",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@types/webpack": "^5.28.5",
+    "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "rimraf": "^5.0.5",
+    "ts-loader": "^9.5.1"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
